# AI-Gateway

./: .env  .gitignore  docker-compose.yml  gateway.db  pyproject.toml  requirements.txt  run.py  start.bat  test_gateway.db
src/: algorithms.py  analytics.py  auth.py  config.py  database.py  key_manager.py  logging.py  main.py  models.py  proxy.py  rate_limiter.py
templates/: index.html
tests/: test_proxy.py
