[project]
name = "ai-gateway"
version = "1.0.0"
description = "AI Gateway - Unified API proxy for multiple AI providers"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "pyyaml==6.0.2",
    "httpx==0.28.1",
    "python-jose==3.3.0",
    "sqlalchemy==2.0.36",
    "cryptography==43.0.3",
]

[tool.vercel]
entrypoint = "src/main.py"
